--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,9 @@
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
+<!-- font awesome -->
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="main.css">
 
@@ -12,11 +15,13 @@
 
 <div class="wrapper">
 
-<h1>Sinatra Shack !!</h1>
+<h1> <i class="fa fa-cutlery fa-2x"></i> Sinatra Shack !!</h1>
 
-
-<%= yield %>
-
+<div class="row">
+	<div class="col-xs-12">
+		<%= yield %>
+	</div>
+</div>
 
 <hr/>
 
